Fix spacing bug

--- a/sorellaFront/src/app/view/tab2/components/product-detail/product-detail.component.scss
+++ b/sorellaFront/src/app/view/tab2/components/product-detail/product-detail.component.scss
@@ -15,7 +15,7 @@
 .product-images{
     margin-top: 8.5rem;
     width: 100%;
-    height: 60%;
+    max-height: 50%;
 }
 
 .product-images__selected-image{
@@ -55,7 +55,7 @@
     width: 85%;
     min-height: 7rem;
     aspect-ratio: 2/1.1;
-    margin: 0 auto 0.5rem auto;
+    margin: 0 auto 3rem auto;
     background-color: #ffffff;
     border-radius:2rem;
     display: flex;
